# comms

./: .travis.yml  LICENSE  README.md  comms.cabal  stack.yaml  travis-config.json.enc
app/: Main.hs
solidity/: CovertComms.sol  contract.json
src/Comms/: POP3.hs  SMTP.hs  Types.hs
src/Comms/Common/: Types.hs  Util.hs
src/Comms/Eth/: AddressBook.hs  Cost.hs  Provider.hs  Scanner.hs  Sender.hs  Tools.hs
src/Comms/POP3/: Handler.hs  Server.hs  State.hs
src/Comms/SMTP/: Handler.hs  Server.hs  State.hs
test/: Spec.hs
