name:                comms
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aputlock/comms#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Oluwo, Andrew Putlock
maintainer:          broluwo@terpmail.umd.edu, aputlock@terpmail.umd.edu
copyright:           2017 Brian Oluwo, Andrew Putlock
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Comms.Eth.Scanner
                     , Comms.Eth.Sender
                     , Comms.Common.Util
                     , Comms.Common.Types
                     , Comms.SMTP
                     , Comms.POP3
  other-modules:       Comms.Eth.Tools
  build-depends:       base >= 4.7 && < 5
                     , web3 >= 0.5.5.0
                     , text >= 1.2.2.2
                     , bytestring >= 0.10.8.1
                     , cmdargs >= 0.10.18
                     , aeson >= 1.1.2.0
                     , network >= 2.6.3.2
                     , signal >= 0.1.0.4
                     , mtl >= 2.2.1
                     , stm >= 2.4.4.1
                     , regex >= 1.0.1.3
  default-language:    Haskell2010

executable comms
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , comms
                     , cmdargs
                     , aeson
                     , network
                     , signal
                     , mtl
                     , stm
                     , regex
  default-language:    Haskell2010

test-suite comms-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , comms
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aputlock/comms
