name:                comms
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aputlock/comms#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Oluwo, Andrew Putlock
maintainer:          broluwo@terpmail.umd.edu, aputlock@terpmail.umd.edu
copyright:           2017 Brian Oluwo, Andrew Putlock
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Comms.Eth.AddressBook
                     , Comms.Eth.Scanner
                     , Comms.Eth.Sender
                     , Comms.Common.Util
                     , Comms.Types
                     , Comms.SMTP.Server
                     , Comms.POP3.Server 
  other-modules:       Comms.Eth.Cost
                     , Comms.Eth.Provider
                     , Comms.SMTP.Handler                     
                     , Comms.SMTP.State
                     , Comms.POP3.Handler
                     , Comms.POP3.State
  build-depends:       base >= 4.7 && < 5
                     , web3 >= 0.5.5.0
                     , RSA >= 2.3.0
                     , text >= 1.2.2.2
                     , bytestring >= 0.10.8.1
                     , cmdargs >= 0.10.18
                     , aeson >= 1.1.2.0
                     , crypto-api >= 0.13.2
                     , crypto-pubkey-types >= 0.4.3
                     , asn1-encoding >= 0.9.5
                     , base16-bytestring >= 0.1.1.6
                     , memory >= 0.14.8
                     , directory >= 1.3.0.0
                     , ilist >= 0.3.1.0
                     , network >= 2.6.3.2
                     , mtl >= 2.2.1
                     , stm >= 2.4.4.1
                     , regex >= 1.0.1.3
                     , async >= 2.1.1.1
                     , signal >= 0.1.0.4
                     , file-embed >= 0.0.10
  default-language:    Haskell2010

executable comms
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , comms
                     , cmdargs
                     , aeson
                     , network
                     , mtl
                     , stm
                     , regex
                     , async
                     , text
                     , signal
                     , directory
                     , web3
  default-language:    Haskell2010

test-suite comms-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , comms
                     , tasty >= 0.11.3
                     , tasty-hunit >= 0.9.2
                     , crypto-pubkey-types
                     , web3
                     , async
                     , network
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aputlock/comms
